--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=c86399ede2a075973e79b268cc419401",
+    "/css/app.css": "/css/app.css?id=1b9d0e9e90ca963293e466aa10cd5838"
 }
